<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.movieappfrontend.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_movieSearchFragment"
            app:destination="@id/movieSearchFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.example.movieappfrontend.ui.moviedetail.MovieDetailFragment"
        android:label="@string/movieDetails"
        tools:layout="@layout/fragment_movie_detail" >
        <argument
            android:name="movie"
            app:argType="com.example.movieappfrontend.data.model.Movie" />
    </fragment>
    <fragment
        android:id="@+id/tvseriesFragment"
        android:name="com.example.movieappfrontend.ui.tvseries.TvseriesFragment"
        android:label="@string/tvSeries"
        tools:layout="@layout/fragment_tvseries" />
    <fragment
        android:id="@+id/whishlistFragment"
        android:name="com.example.movieappfrontend.ui.whishlist.WhishlistFragment"
        android:label="@string/whishlist"
        tools:layout="@layout/fragment_whishlist" />
    <fragment
        android:id="@+id/movieSearchFragment"
        android:name="com.example.movieappfrontend.ui.search.MovieSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_movie_search">
        <argument
            android:name="queryString"
            app:argType="string" />
    </fragment>
</navigation>